# softverse

./: .gitignore  .pre-commit-config.yaml  debug_icpsr.py  pyproject.toml  readme.R  readme.md
.github/workflows/: ci.yml  docs.yml  python-publish.yml
archive/notebooks/: 01_get_datasets_for_dataverses.ipynb  02a_get_scripts_from_dataverse.ipynb  02b_get_scripts_from_zenodo.ipynb  02c_1_openicpsr_search.ipynb  02c_2_get_scripts_from_icpsr.ipynb  02d_icpsr_unzip_and_filter.ipynb  03_tally_imports.ipynb  04_tar_gz.ipynb
archive/r/: 01_get_datasets.R  01_get_jop_R_files.ipynb  02_get_imports.R  02a_get_imports_parallel.R  03_plot.R
config/: settings.yaml
data/: apsr_datasets.csv  dataverse_socialscience.csv  datavese_socialscience.csv  file_imports.csv  imports_per_package.csv  jop_data_file_package_imports_1.csv  jop_data_file_package_imports_2.csv  jop_datasets.csv  journals.csv  jpe_datasets.csv  polbehavior_datasets.csv
docs/: conf.py  index.rst
docs/api/: index.rst
scripts/: 01_get_datasets.R  01_get_datasets_for_dataverses.ipynb  01_get_jop_R_files.ipynb  02_get_imports.R  02_get_scripts_per_dataset.ipynb  02a_get_imports_parallel.R  02a_get_scripts_from_dataverse.ipynb  02b_get_scripts_from_zenodo.ipynb  02c_2_get_scripts_from_icpsr.ipynb  02d_icpsr_unzip_and_filter.ipynb  03_tally_imports.ipynb  04_tar_gz.ipynb
scripts/r/: 02_get_imports.R  02a_get_imports_parallel.R  03_plot.R
softverse/: __init__.py  config.py
softverse/analyzers/: __init__.py  import_analyzer.py  journal_analyzer.py
softverse/collectors/: __init__.py  base_collector.py  dataverse_collector.py  dataverse_scripts.py  icpsr_collector.py  osf_collector.py  researchbox_collector.py  zenodo_collector.py
softverse/utils/: __init__.py  api_utils.py  file_utils.py  logging_utils.py  repo_status.py  zip_utils.py
tests/: test_config.py  test_import_analyzer.py  test_osf_collector.py  test_researchbox_collector.py
