[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "softverse"
version = "0.1.0"
description = "Auto-compute Citations to Software From Replication Files"
authors = [
    {name = "Gaurav Sood", email = "gsood07@gmail.com"},
    {name = "Daniel Weitzel"}
]
readme = "readme.md"
license = {text = "MIT"}
homepage = "https://github.com/recite/softverse"
repository = "https://github.com/recite/softverse"
documentation = "https://github.com/recite/softverse"
keywords = ["research", "software", "citations", "replication", "dataverse", "zenodo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "pyDataverse>=0.2.1",
    "tqdm>=4.60.0",
    "zenodo-get>=1.3.4",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "selenium>=4.0.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.2.1",
    "beautifulsoup4>=4.14.2",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "furo>=2022.6.21",
    "sphinx-click>=4.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.6",
]

[project.scripts]
collect-datasets = "softverse.scripts.collect_datasets:main"
collect-scripts = "softverse.scripts.collect_scripts:main"
analyze-imports = "softverse.scripts.analyze_imports:main"
create-archives = "softverse.scripts.create_archives:main"
run-pipeline = "softverse.scripts.run_pipeline:main"

[dependency-groups]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.20.0",
    "sphinx>=5.0.0",
    "furo>=2022.6.21",
    "sphinx-click>=4.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.6",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | scripts
  | temp
  | logs
)/
|debug_.*\.py
|monitor_.*\.py
|test_icpsr_download\.py
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["softverse"]
skip_glob = ["scripts/*", "temp/*", "logs/*", "debug_*.py", "monitor_*.py", "test_icpsr_download.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["scripts/", "temp/", "logs/", "tests/", "debug_*.py", "monitor_*.py", "test_icpsr_download.py"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "archive/",
    "scripts/",
    "temp/",
    "logs/",
    "debug_*.py",
    "monitor_*.py",
    "test_icpsr_download.py"
]

[tool.ruff.lint]
# Enable flake8 equivalents + additional rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"softverse/analyzers/import_analyzer.py" = ["E501"]  # long lines in R code templates

[tool.ruff.lint.isort]
known-first-party = ["softverse"]
split-on-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=softverse --cov-report=term-missing"
